# keva

./: README.md  keva_mem.py  keva_str.py  pyproject.toml  requirements.txt  setup.py
keva/: __init__.py  keva_mem.py  keva_server.py  keva_str.py
tests/: test_keva.py
